# rust-web-demo

./: .env  Cargo.toml
src/: error.rs  lib.rs  main.rs
src/config/: config.rs  db_config.rs  log.rs  mod.rs
src/controller/: user_controller.rs
src/domain/request/: user.rs
src/domain/response/: mod.rs  user.rs
src/entity/: mod.rs  tables.rs
src/mapper/: mod.rs
src/service/: mod.rs  user_service.rs
